--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^0.21.1",
-    "react": "17.0.0",
-    "react-dom": "17.0.0"
+    "material": "^0.4.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "snippets": "^0.0.6",
+    "ui": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
